# RayTracer

./: CMakeLists.txt  Документация.docx
Ray Tracer/: camera.h  color.h  cube.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  sphere.h  texture.h  utility_functions.h  vec3.h
sutil/: Mesh.cpp  Mesh.h
